pitrery 1.9
===========

  * Do not exit without error when the server is in recovery. This is
    not a consistent behaviour.

  * Improve the speed of the purge of archives WAL files by stopping
    the purge when the limit is reached.

  * Add the -T switch along with the LOG_TIMESTAMP option to prefix
    messages of backup, restore and purge with the date and time.


pitrery 1.8
===========

  * Exclude temporary locations from backup

  * Support pax to create hardlinks, for better portability. GNU cp
    stays the default, the configuration goes to the Makfile.

  * Add a -V switch to the pitrery wrapper script to show the version.

  * Add an option (-R) to overwrite target directory on restore.


pitrery 1.7
===========

  * Show the storage method and compression suffix when listing
    backups in verbose mode.

  * Allow configuration of compression tools used when storing backup
    contents using tar.

  * Remove the `pitr_mgr` symlink.

  * Have `archive_xlog` create the local target directory so that we don't
    end up archiving on the same path, when the user forget to create it.

  * Run backup hook command even if the backup fails. The exit code of the
    backup is available to the hook in the PITRERY_EXIT_CODE env variable.

  * Bugfix on sed -E vs sed -r, use the later for older GNU sed.


pitrery 1.6
===========

  * Exit without error when backup is run on a hot standby
    server. Issue a warning message when run interactively, so an
    active cron job does not send any mail.

  * Bugfixes and improvements on documentation


pitrery 1.5
===========

  * Force the checkpoint on pg_start_backup() when possible

  * Support rsync for the base backup. tar remains the default with a
    new -s option for backup_pitr and the STORAGE configuration
    variable

  * Save configuration files if they are outside of PGDATA

  * Rename `pitr_mgr` to `pitrery`, with a symlink for backward
    compatibility
