@@ -249,24 +249,24 @@ compress more and/or faster by using other compression tools, like
 `bzip2`, `pigz`, the prerequisites are that the compression program
 must accept the `-c` option to output on stdout and the data to
 compress from stdin. The compression program can be configured by
-setting `COMPRESS_BIN` in the configuration file. The output filename
+setting `ARCHIVE_COMPRESS_BIN` in the configuration file. The output filename
 has a suffix depending on the program used (e.g. "gz" or "bz2", etc),
-it must be configured using `COMPRESS_SUFFIX` (without the leading dot),
+it must be configured using `ARCHIVE_COMPRESS_SUFFIX` (without the leading dot),
 this suffix is most of the time mandatory for decompression. The
-decompression program is then configured using `UNCOMPRESS_BIN`, this
+decompression program is then configured using `ARCHIVE_UNCOMPRESS_BIN`, this
 command must accept a compressed file as its first argument.
 
 For example, the fastest compression is achived with `pigz`, a
 multithreaded implementation of gzip:
 
-    COMPRESS_BIN="pigz"
-    UNCOMPRESS_BIN="pigz -d"
+    ARCHIVE_COMPRESS_BIN="pigz"
+    ARCHIVE_UNCOMPRESS_BIN="pigz -d"
 
 Or maximum, but slow, compression with the standard `bzip2`:
 
-    COMPRESS_BIN="bzip2 -9"
-    COMPRESS_SUFFIX="bz2"
-    UNCOMPRESS_BIN="bunzip"
+    ARCHIVE_COMPRESS_BIN="bzip2 -9"
+    ARCHIVE_COMPRESS_SUFFIX="bz2"
+    ARCHIVE_UNCOMPRESS_BIN="bunzip"
 
 These three parameters can be configured only inside the configuration
 file, not from the command line of `archive_xlog` and `restore_xlog`.
