@@ -118,15 +118,15 @@ SYSLOG_IDENT="postgres"
 # archiving. The program used in COMPRESS_BIN must support a -c option
 # to output to stdout and access data from stdin (tested with gzip, pigz,
 # bzip2, pbzip2).  Defaults to "gzip -4"
-#COMPRESS_BIN=
+#ARCHIVE_COMPRESS_BIN=
 
 # The suffix added by the compression tool (needed for
 # decompression). Defaults to "gz"
-#COMPRESS_SUFFIX=
+#ARCHIVE_COMPRESS_SUFFIX=
 
 # Path to the decompression program, it must take the file to process
 # as its first parameter. Defaults to "gunzip"
-#UNCOMPRESS_BIN=
+#ARCHIVE_UNCOMPRESS_BIN=
 
 # The compression used with the "tar" storage method can be configured
 # with these options. The command must be able to be used with
